--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,58 @@
 /* TODO Add site wide styles */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.homepage {
+    border: 1px solid black;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    padding: 1rem;
+}
+
+.user-nav {
+    height: 100%;
+    border: 1px solid black;
+    width: 15%;
+}
+
+.current-option {
+    height: 100%;
+    border: 1px solid black;
+    width: 85%;
+    margin-left: .5rem;
+    padding: .3rem;
+    display: flex;
+}
+
+
+.current-option-content {
+    height: 100%;
+    border: 1px solid black;
+    width: 80%;
+    margin-left: .5rem;
+}
+
+.current-option-options {
+    height: 100%;
+    border: 1px solid black;
+    width: 20%;
+}
+
+.current-option-content-details {
+    display: flex;
+    flex-direction: column;
+    padding: .5rem;
+}
+
+.edit-container {
+    border: 1px solid black;
+    height: 5rem;
+}
+
+.edit-container-area {
+    border: 1px solid black;
+    height: 53.9rem;
+}
