--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -141,3 +141,18 @@
 .fire-button:hover {
     color: red;
 }
+
+.text-area-note {
+    width: 100%;
+    height: 53rem;
+    font-size: 16px;
+    border: none;
+}
+
+.note-edit-name {
+    border: none;
+    border-bottom: 1px solid black;
+    width: max-content;
+    display: flex;
+    justify-content: center;
+}
