--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -6,6 +6,10 @@
     font-family: 'Roboto Slab', serif;
 }
 
+button {
+    cursor: pointer;
+}
+
 .homepage {
     /* border: 1px solid black; */
     /* border-radius: 3px; */
@@ -54,6 +58,7 @@
     padding: 5px;
     border-radius: 3px;
     align-items: center;
+    margin-bottom: 2rem;
 }
 
 .current-option-content-details {
@@ -117,7 +122,7 @@
 .note-book-heading {
     display: flex;
     justify-content: center;
-    width: 12rem;
+    width: 100%;
     margin-bottom: 8px;
     padding-bottom: 3px;
     border-bottom: 1px solid black;
@@ -155,4 +160,45 @@
     width: max-content;
     display: flex;
     justify-content: center;
+}
+
+.note-heading {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid black;
+
+    margin-bottom: 8px;
+    padding-bottom: 3px;
+}
+
+.add-note-button-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 8px;
+}
+
+.add-button {
+    margin: 5px;
+    background-color: transparent;
+    border-radius: 5px;
+    padding: 2px;
+}
+
+/* .note-delete-and-edit-container {
+    width: 5rem;
+    display: flex;
+    justify-content: space-between;
+} */
+
+#delete-note {
+    margin-right: 15px;
+}
+
+.margin-delete {
+    margin-right: 5px;
+}
+
+.hello-user {
+    display: flex;
+    justify-content: space-between;
 }
