--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -105,6 +105,7 @@ button {
     width: 13.6rem;
     justify-content: space-between;
     margin:5px 0;
+    cursor: pointer;
 }
 
 .new-notebook {
