--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -316,3 +316,18 @@ button {
     display: flex;
     justify-content: center;
 }
+
+*:disabled {
+    cursor: not-allowed;
+}
+
+.notebook-edit {
+    padding: 1px;
+    padding-right: 3px;
+    padding-left: 5px;
+    border-top: 1px solid grey;
+    border-right: 1px solid grey;
+    border-bottom: 1px solid grey;
+    border-radius: 3px;
+
+}
