--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -67,6 +67,7 @@ button {
     padding: .5rem;
     background-color: rgba(211, 211, 211, .7);
     border-radius: 3px;
+    max-height: 93vh
 }
 
 .edit-container {
@@ -150,7 +151,7 @@ button {
 
 .text-area-note {
     width: 100%;
-    height: 53rem;
+    height: 85vh;
     font-size: 16px;
     border: none;
 }
