--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -6,7 +6,7 @@
     font-family: 'Roboto Slab', serif;
 }
 
-body {
+html, body {
     height: 100vh;
 }
 
@@ -371,7 +371,7 @@ button {
     padding: .83rem;
     display: flex;
     border-radius: 3px;
-    background-color: white;
+    background-color: rgba(0, 0, 0, .7);
     flex-direction: column;
 }
 
@@ -383,6 +383,7 @@ button {
     margin-bottom: 10px;
     border-radius: 3px;
     font-size: 25px;
+    background-color: white;
 }
 
 .browser-details {
@@ -393,6 +394,7 @@ button {
     /* border-top: none; */
     border-radius: 3px;
     height: 100%;
+    background-color: white;
 }
 
 .option-list {
@@ -400,6 +402,7 @@ button {
     border-right: 1px solid rgba(0, 0, 0, .7);
     height: 100;
     padding: 10px 0;
+
 }
 
 .option-list-item {
@@ -436,6 +439,8 @@ button {
     flex-direction: column;
     height: 100%;
     justify-content: center;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .twtypxtext {
@@ -456,7 +461,7 @@ button {
     align-items: center;
     border: 1px solid rgba(0, 0, 0, .7);
     border-radius: 3px;
-    width: 100%;
+    width: 80%;
     padding: 3rem 2rem;
     height: fit-content;
 }
@@ -466,5 +471,6 @@ button {
 }
 
 .cntr {
-    max-width: 30rem;
+    max-width: 40rem;
+    font-size: 18px;
 }
