--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -6,7 +6,7 @@
     font-family: 'Roboto Slab', serif;
 }
 
-html, body {
+html, body, :root {
     height: 100vh;
 }
 
@@ -18,7 +18,7 @@ button {
     /* border: 1px solid black; */
     /* border-radius: 3px; */
     display: flex;
-    padding: 1rem;
+    /* padding: 10px; */
     background-image: url(https://www.highlysprungsofas.co.uk/wp-content/uploads/2016/03/HSS00A9.png);
     background-position: center;
     background-size: contain;
@@ -72,7 +72,8 @@ button {
     padding: .5rem;
     background-color: rgba(211, 211, 211, .7);
     border-radius: 3px;
-    max-height: 93vh
+    max-height: 93vh;
+    height: 100%;
 }
 
 .edit-container {
@@ -93,6 +94,7 @@ button {
     border-radius: 0 0 3px 3px;
     background-color: white;
     padding: 1rem;
+    height: 100%;
 }
 
 .add-and-notebooks {
@@ -373,6 +375,8 @@ button {
     border-radius: 3px;
     background-color: rgba(0, 0, 0, .7);
     flex-direction: column;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .browser-choice {
