--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -27,19 +27,15 @@ button {
 }
 
 .user-nav {
-    height: 100%;
-    /* border: 1px solid black; */
+    height: fit-content;
     width: 15%;
-    /* border-radius: 3px;
-    background-color: white;
-    padding: 5px; */
+    margin: .5rem;
 }
 
 .current-option {
-    /* height: 100%; */
-    /* border: 1px solid black; */
     width: 85%;
-    margin-left: .5rem;
+    margin: .5rem;
+    margin-left: 0;
     padding: .3rem;
     display: flex;
     border-radius: 3px;
@@ -72,7 +68,7 @@ button {
     padding: .5rem;
     background-color: rgba(211, 211, 211, .7);
     border-radius: 3px;
-    max-height: 93vh;
+    max-height: 94.8vh;
     height: 100%;
 }
 
@@ -369,7 +365,8 @@ button {
 .browser {
     height: 94.9vh;
     width: 85%;
-    margin-left: .5rem;
+    margin: .5rem;
+    margin-left: 0;
     padding: .83rem;
     display: flex;
     border-radius: 3px;
@@ -427,7 +424,7 @@ button {
     display: flex;
     flex-direction: column;
     margin: 20px 0 30px 0;
-    
+
 }
 
 .date {
