--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -438,7 +438,6 @@ button {
     align-items: center;
     width: 100%;
     flex-direction: column;
-    height: 100%;
     justify-content: center;
     overflow-y: auto;
     overflow-x: hidden;
@@ -478,4 +477,18 @@ button {
 
 .mrgnbtm1rem {
     margin-bottom: 1rem;
+}
+
+.associated-notes-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.associated-list-items {
+    font-size: 22px;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
 }
